--- a/templates/warehouse_main.html
+++ b/templates/warehouse_main.html
@@ -87,7 +87,7 @@ function redirectTO(path) {
                 </div>
                 <div class="button">
                     <button type="button" onclick="redirectTO('/warehouse/get_products/')">Приемка</button>
-                    <button type="button">Сортировка</button>
+                    <button type="button" onclick="redirectTO('/warehouse/sort/')" >Сортировка</button>
                     <button type="button">Отгрузка</button>
                     <button type="button">Перемещение</button>
                     <button type="button">Что за товар</button>
