--- a/static/warehouse.css
+++ b/static/warehouse.css
@@ -533,3 +533,59 @@ input:checked + .lab:before {
     background-color: #95E6D6;
     padding: -4px;
 }
+
+.prokrutka {
+    height: 552px;
+    width: 60vw;
+    background-color:white;
+    border: 1px solid white;
+    border-radius: 10px;
+    margin-left: 75px;
+    overflow-y: scroll;
+    overflow-x: scroll;
+    margin-bottom: 20%;
+}
+
+table {
+    border-collapse: collapse;
+    background-color: white;
+    border: 1px solid #98A4A6;
+    width: 100%;
+    color: rgba(24, 32, 38, 1);
+}
+
+th {
+    height: 30px;
+    padding-left: 5px;
+    padding-right: 5px;
+    white-space: nowrap;
+    border: 1px solid #98A4A6;
+    border-collapse: collapse;
+    color: rgba(24, 32, 38, 1);
+    font-weight: normal;
+    font-family: Montserrat, sans-serif;
+}
+
+
+td {
+    border-collapse: collapse;
+    color: rgba(24, 32, 38, 1);
+    height: 10px;
+    padding: 10px;
+    white-space: nowrap;
+    font-weight: normal;
+    font-family: Montserrat, sans-serif;
+    border: 1px solid #98A4A6;
+    border-left: 0px;
+    border-right: 0px;
+}
+
+input {
+    margin-left: -5px;
+    margin-right: 5px;
+    width: 100%;
+}
+
+.scroll:nth-child(2n) {
+    background-color: #F5FAFF;
+}
